--- a/.chadrc/init.rc
+++ b/.chadrc/init.rc
@@ -1,7 +1,7 @@
 #!/bin/bash
 
 # Add Cask binary
-export PATH="$HOME/.cask/bin:$PATH"
+export PATH="$HOME/.cask/bin:$HOME/.rvm/bin:$PATH"
 
 # Alias for config file
 alias config='/usr/bin/git --git-dir=$HOME/.cfg/ --work-tree=$HOME'
