--- a/.chadrc/init.rc
+++ b/.chadrc/init.rc
@@ -1,7 +1,12 @@
 #!/bin/bash
 
 # Add Cask binary
-export PATH="$HOME/.cask/bin:$HOME/.rvm/bin:$PATH"
+export PATH="$HOME/.cask/bin"
+
+export PATH="$PATH:$HOME/.rvm/bin" # Add RVM to PATH for scripting
+
+export NVM_DIR="/home/chad/.nvm"
+[ -s "$NVM_DIR/nvm.sh" ] && . "$NVM_DIR/nvm.sh"  # This loads nvm
 
 # Alias for config file
 alias config='/usr/bin/git --git-dir=$HOME/.cfg/ --work-tree=$HOME'
