--- a/.chadrc/init.rc
+++ b/.chadrc/init.rc
@@ -1,7 +1,7 @@
 #!/bin/bash
 
 # Add Cask binary
-export PATH="$HOME/.cask/bin"
+export PATH="$PATH:$HOME/.cask/bin"
 
 export PATH="$PATH:$HOME/.rvm/bin" # Add RVM to PATH for scripting
 
