--- a/.xsessionrc
+++ b/.xsessionrc
@@ -11,11 +11,11 @@ trayer --edge top --align right --SetDockType true --SetPartialStrut true \
        --expand true --width 10 --transparent true --alpha 0 --tint 0x00000000 \
        --height 17 &
 
-xscreensaver -no-splash &
-xfce4-volumed &
+# xscreensaver -no-splash &
+# xfce4-volumed &
 
-if [ -x /usr/bin/nm-applet ] ; then
-   nm-applet --sm-disable &
-fi
+# if [ -x /usr/bin/nm-applet ] ; then
+#    nm-applet --sm-disable &
+# fi
 
-dropbox start &
+# dropbox start &
