Switched out the Debian xmobar package with cabal. Also moved Xmobar theme to something resembling "Solarized Dark".

--- a/.dotfiles/init/paths.rc
+++ b/.dotfiles/init/paths.rc
@@ -5,5 +5,6 @@ export PATH="$PATH:/opt/gradle/gradle-3.5/bin"
 export PATH="$PATH:$HOME/.dotfiles/bin"
 export PATH="$PATH:$HOME/.cask/bin"
 export PATH="$PATH:$HOME/.rvm/bin"
+export PATH="$PATH:$HOME/.cabal/bin"
 export GOPATH="$HOME/code/go"
 export PATH="$PATH:/opt/gradle/gradle-3.5/bin"
